--- a/src/app/gifs/components/card/card.component.html
+++ b/src/app/gifs/components/card/card.component.html
@@ -1,10 +1,3 @@
 <div class="row">
-    <div *ngFor="let gif of gifs" class="col-sm-6 col-md-3">
-        <div class="card mb-4 bg-dark text-center">
-            <img [src]="gif.images.downsized_medium.url" [alt]="gif.title" class="card-img-top">
-            <div class="card-body text-white">
-                <p class="card-text">{{gif.title}}</p>
-            </div>
-        </div>
-    </div>
+    <gifs-single *ngFor="let gif of gifs" class="col-sm-6 col-md-3" [gif]="gif"></gifs-single>
 </div>
