--- a/src/app/gifs/pages/home/home.component.html
+++ b/src/app/gifs/pages/home/home.component.html
@@ -3,7 +3,7 @@
         <!-- Busqueda -->
         <gifs-search></gifs-search>
     </div>
-    <div class="col-12 pt-5">
-        <gifs-card [gifs]="gifs"></gifs-card>
+    <div class="col-12 pt-5 gifs-card">
+        <gifs-card [gifs]="gifs" class="gifs-content"></gifs-card>
     </div>
 </div>
