--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%; /* 10px = 1rem */
+    overflow-x: hidden;
 }
 *, *:before, *:after {
     box-sizing: inherit;
